🐛 many fixes for switching EGs and season names/overview for EGs